avanti con lezione numpy

--- a/6. La libreria numpy.ipynb
+++ b/6. La libreria numpy.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*Contenuti*\n",
+    "===\n",
+    "- [La libreria *numpy*](#La-libreria-numpy)\n",
+    "    - [Cosa è un array](#Cosa-è-un-array)\n",
+    "    - [Costruzione](#Costruzione)\n",
+    "    - [Accesso ai singoli elementi](#Accesso-ai-singoli-elementi)\n",
+    "    - [*shape*, *size* e *ndim*](#shape,-size-e-ndim)\n",
+    "        - [*Esercizio 1*](#Esercizio-1)\n",
+    "    - [Tipo e *casting* implicito](#Tipo-e-casting-implicito)\n",
+    "    - [Slicing e accesso a righe e colonne](#Slicing-e-accesso-a-righe-e-colonne)\n",
+    "    - [Generazione di numeri random](#Generazione-di-numeri-random)\n",
+    "    - [Operazioni aggregate e *axes*](#Operazioni-aggregate-e-axes)\n",
+    "        - [*Esercizio 2*](#Esercizio-2)\n",
+    "        - [*Esercizio 3*](#Esercizio-3)\n",
+    "    - [*concatenate*, *stack* e *split*](#concatenate,-stack-e-split)\n",
+    "    - [Funzioni *universali*](#Funzioni-universali)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "La libreria *numpy*\n",
     "===\n",
     "Lo standard Python per il calcolo vettoriale - molto usato nel machine learning - è la libreria *numpy*. Questa costituisce, insieme ad altre librerie come *jupyter* (sviluppo), *pandas* (analisi e gestione dei dati), *matplotlib* (visualizzazione), *scikit-learn* (apprendimento) e *keras* (reti neurali) l'ecosistema Python per la data science, sicuramente il più usato, supportato e flessibile.\n",
@@ -26,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gli *array*\n",
+    "Cosa è un *array*\n",
     "---\n",
     "In numpy, ogni vettore o matrice è chiamato *array*.\n",
     "\n",
@@ -39,7 +61,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Costruzione"
+    "Costruzione\n",
+    "---\n",
+    "Un array numpy si può costruire in vari modi. Per esempio, a partire da una lista Python."
    ]
   },
   {
@@ -86,8 +110,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Un array numpy si può costruire in vari modi. Vediamone alcuni.\n",
-    "\n",
     "La funzione *full* genera un array con un numero assegnato di righe e colonne, e riempe tutte le sue posizioni con un singolo valore, anche questo assegnato.\n",
     "\n",
     "**Nota**: numpy tratta come array sia le matrici che i vettori (singola riga o colonna). Per comodità di lettura, anche se non è obbligatorio, chiameremo le (variabili che contengono le) matrici con la lettera maiuscola, mentre utilizzeremo la minuscola per i vettori."
@@ -287,7 +309,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Accesso ai singoli elementi\n",
+    "Accesso ai singoli elementi\n",
+    "---\n",
     "Come per Python, si accede agli elementi di un array numpy attraverso le parentesi quadre."
    ]
   },
@@ -366,7 +389,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### *shape*, *size* e *ndim*\n",
+    "*shape*, *size* e *ndim*\n",
+    "---\n",
     "Gli array hanno delle proprietà legate alla loro struttura. \n",
     "\n",
     "Come abbiamo visto nella chiamata a full, zeros e ones, è possibile specificare il numero di righe e colonne di un array. La coppia di questi valori è detta *shape*, ed è una proprietà (o *campo*) di ogni array."
@@ -649,14 +673,14 @@
     "\n",
     "In matematica, un vettore è formato da una sola riga (o colonna), ed ha quindi una sola dimensione. Una matrice, che ha righe e colonne, ha due dimensioni.\n",
     "\n",
-    "L'estensione di una matrice a più di due dimensioni è detta *tensore*. Un filmato può essere rappresentato con un tensore: ogni immagine che lo compone è una matrice di pixel, e ciascuna di esse è sistemata sulla terza dimensione, quella del tempo."
+    "L'estensione di una matrice a più di due dimensioni è detta *tensore*. Un filmato può essere rappresentato con un tensore: ogni frame che lo compone è una matrice di pixel, e ciascuno di essi è sistemato sulla terza dimensione, quella del tempo."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### *Esercizio 1*\n",
+    "### *Esercizio 1*\n",
     "Pensiamo ad ogni immagine di un filmato come a tre diverse matrici, legate ai livelli *RGB*. Quante dimensioni avrà il tensore che rappresenta il filmato?"
    ]
   },
@@ -746,17 +770,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mentre ndim è il numero di dimensioni di un array, shape indica la *profondità* di ogni dimensione. Tornando all'esempio del filmato con immagini e livelli RGB, avremo\n",
-    "- ndim = 4: due per ogni livello di colore, una per il colore e una per il tempo. \n",
-    "- shape = (\\# di pixel, 3, \\# di immagini nel filmato)."
+    "Mentre ndim è il numero di dimensioni di un array, shape indica la *profondità* di ogni dimensione. Tornando all'esempio del filmato con frame e livelli RGB, avremo\n",
+    "- ndim = 4: una per il tempo, una per il colore e due per ogni livello di colore (la $x$ e la $y$)\n",
+    "- shape = (\\# di frame nel filmato, 3, \\# di pixel sulla $x$, \\# di pixel sulla $y$)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tipo e casting implicito\n",
-    "\n",
+    "Tipo e casting implicito\n",
+    "---\n",
     "Ciascun array numpy ha un tipo dati *dtype*. La libreria interpreta automaticamente il tipo di un nuovo array in base alla dichiarazione. Volendo, si può specificare esplicitamente il tipo."
    ]
   },
@@ -878,7 +902,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Slicing e accesso a righe e colonne\n",
+    "Slicing e accesso a righe e colonne\n",
+    "---\n",
     "La libreria prevede operazioni di slicing multidimensionale ispirate a quelle built-in di Python. Per gli array monodimensionali non c'è differenza rispetto alle liste Python."
    ]
   },
@@ -1179,6 +1204,442 @@
    ],
    "source": [
     "A.flatten()[::-1].reshape(A.shape)#spiaccico, inverto e rimodello"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generazione di numeri random\n",
+    "---\n",
+    "Il modulo *random* di numpy gestisce la generazioni di (vettori di numeri) casuali da vari tipi di distribuzione. Vediamo alcuni esempi."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.4578475996567124\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.random()#uniforme continua in [0,1)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 283,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.0503083  0.36375067 0.41625584 0.76224043 0.72358896]\n",
+      " [0.51985117 0.58554192 0.82482395 0.56804239 0.00506087]\n",
+      " [0.21005759 0.87855076 0.4066274  0.28991221 0.36765486]\n",
+      " [0.67042663 0.48889341 0.1791717  0.76892475 0.9485265 ]\n",
+      " [0.66349391 0.26018573 0.28307924 0.20578884 0.06918044]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.random.random((5,5))#uniforme continua in [0,1)\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 285,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6 2 6 5 4]\n",
+      " [0 4 1 6 4]\n",
+      " [0 4 8 5 6]\n",
+      " [2 2 0 2 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = np.random.randint(0, 10, (4,5))#uniforme discreta in [0,10)\n",
+    "print(B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 287,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3.89911103 2.97130344 4.17137707 5.277742   4.27812656]\n",
+      " [3.58137748 2.2190723  3.85228038 4.09390659 3.70830676]\n",
+      " [2.12341792 3.73546421 3.13002614 2.33224833 3.49474345]\n",
+      " [1.85127094 2.27989941 0.51386278 3.86359187 3.03900466]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = np.random.normal(3, 1, (4,5))#normale, con media 3 e varianza 1\n",
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Operazioni aggregate e *axes*\n",
+    "---\n",
+    "Quando si ha a che fare con grandi quantità di dati, l'estrazione di statistiche globali descrittive è una delle prime analisi da fare. Vediamo qualche *operazione aggregata* sugli array numpy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La somma di tutti gli elementi di un array si fa col metodo *sum*. La funzione sum di Python dà risultati quasi (!!) uguali."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 303,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.09481811 -0.64944468 -1.2255679  -0.32508278 -1.82630409  1.40140246\n",
+      " -0.56156254  0.78095043 -0.45224242  1.43158489 -0.78432526 -0.53348364\n",
+      " -0.36804115  0.27303278 -0.01020842 -1.65578394 -0.27743462  0.47266049\n",
+      "  1.17106085  1.35129371  0.86310624 -1.20920289 -0.66369329  0.09725046\n",
+      "  1.22951829  0.31991502  0.87513629  0.32678501  0.6257205  -0.32715874\n",
+      " -1.42554871 -0.38125472  0.13851281 -0.03376131  0.80731934 -0.76266555\n",
+      " -0.24074792 -0.67665771  0.98471897 -0.75439683 -0.07998894  0.72191388\n",
+      "  2.02845219 -0.00572527  0.45577052  2.70831766 -0.11557941 -1.04977235\n",
+      "  0.29234699  0.6390859 ]\n",
+      "(50,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy.random as rdm\n",
+    "\n",
+    "A = rdm.normal(size=(50,))#leggesi 'shape'; di default, media 0 e varianza 1\n",
+    "print(A)\n",
+    "print(A.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.6950386967046693"
+      ]
+     },
+     "execution_count": 304,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.7763568394002505e-15"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(A) - sum(A)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Che vantaggio ho ad usare la somma di numpy piuttosto che quella built-in di Python?\n",
+    "\n",
+    "Facciamo un confronto dei tempi di esecuzione usando uno dei *magic-commands* di questo ambiente di sviluppo.\n",
+    "\n",
+    "Per saperne di più:\n",
+    "- http://ipython.readthedocs.io/en/stable/interactive/magics.html\n",
+    "- https://blog.jupyter.org/the-big-split-9d7b88a031a7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 309,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.51 µs ± 54.1 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n",
+      "1.85 µs ± 29.6 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit sum(A)\n",
+    "%timeit np.sum(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 314,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "61 ms ± 2.06 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "304 µs ± 18.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "large_array = rdm.normal(size=(1000000,))\n",
+    "%timeit sum(large_array)\n",
+    "%timeit np.sum(large_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lo stesso vale per *max* e *min*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.982553203212117\n",
+      "4.982553203212117\n",
+      "41 ms ± 689 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "362 µs ± 18.8 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.max(large_array))\n",
+    "print(max(large_array))\n",
+    "%timeit max(large_array)\n",
+    "%timeit np.max(large_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La funzione *mean* è un altro esempio di metodo aggregato (senza un equivalente built-in di Python). Proviamo a confrontarla con una possibile implementazione Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.000712977747174847\n",
+      "-0.000712977747174866\n",
+      "58 ms ± 1.17 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "299 µs ± 1.83 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(large_array)/len(large_array))\n",
+    "print(np.mean(large_array))\n",
+    "%timeit sum(large_array)/len(large_array)\n",
+    "%timeit np.mean(large_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Esercizio 2\n",
+    "Ripetere l'analisi fatta per mean per la funzione aggregata numpy *std* (*deviazione standard*).\n",
+    "- scrivere un'implementazione della deviazione standard usando python puro\n",
+    "- confrontare risultati e tempi di esecuzione dell'implementazione e dell'equivalente numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import numpy.random as rdm\n",
+    "from math import sqrt\n",
+    "\n",
+    "def py_std(X):\n",
+    "    #FILL ME\n",
+    "\n",
+    "#FILL ME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Oltre ad essere (incredibilmente) più veloci dell'equivalente di Python, le funzioni aggregate di numpy possono essere utilizzate su uno degli *axes* di un array.\n",
+    "\n",
+    "Come abbiamo visto, le righe sono la prima dimensione di un array: numpy le indica con *axis 0*. Analogamente, le colonne sono *axis 1*, e così via nel caso di più di due dimensioni."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 350,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 2 3 2 0]\n",
+      " [1 1 0 3 3]\n",
+      " [4 4 0 4 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy.random as rdm\n",
+    "\n",
+    "A = rdm.randint(5, size=(3,5))\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 351,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(A))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 352,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 7 3 9 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(A, axis=0))#somma lungo le righe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 353,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 7  8 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(A, axis=1))#somma lungo le colonne"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### *Esercizio 3*\n",
+    "\n",
+    "Riprendiamo l'esempio del filmato come tensore, e immaginiamo di rappresentare ogni frame come una griglia di pixel in scala di grigio: ciascun pixel avrà un valore intero da 0 a 255, dipendentemente dalla sua intensità.\n",
+    "Supponiamo inoltre che il filmato sia composto di 50 frame e che ciascuno di questi sia 5x5 pixel.\n",
+    "\n",
+    "- rappresentare il filmato tramite un array numpy\n",
+    "- calcolare il valore medio di intensità (sui frame del filmato) dei singoli pixel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FILL ME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*concatenate*, *stack* e *split*\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Funzioni *universali*\n",
+    "---\n",
+    "https://jakevdp.github.io/PythonDataScienceHandbook/02.03-computation-on-arrays-ufuncs.html"
    ]
   },
   {
