--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -356,6 +356,156 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "6.2\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0003876317476104\n",
+      "1.0003876317476064\n",
+      "449 ms ± 44.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "2.33 ms ± 140 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import numpy.random as rdm\n",
+    "from math import sqrt\n",
+    "\n",
+    "def py_std(X):\n",
+    "    X_mean = sum(X) / len(X)\n",
+    "    return sqrt(sum((x-X_mean)**2 for x in X) / len(X))\n",
+    "\n",
+    "large_array = rdm.normal(size=(1000000,))\n",
+    "\n",
+    "print(py_std(large_array))\n",
+    "print(np.std(large_array))\n",
+    "%timeit py_std(large_array)\n",
+    "%timeit np.std(large_array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6.3\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 67  80  78 240 215]\n",
+      "  [ 17 200 175  31   7]\n",
+      "  [245 187 193 217  28]\n",
+      "  [ 22 203  25  27 186]\n",
+      "  [168  53  57 166 223]]\n",
+      "\n",
+      " [[141  64 197 184 255]\n",
+      "  [252  93 243  23 190]\n",
+      "  [ 44  92 113 207 116]\n",
+      "  [163  93 234  79 249]\n",
+      "  [ 42 148  69 142  82]]\n",
+      "\n",
+      " [[ 46  60  70  39 149]\n",
+      "  [194 178  28 162   9]\n",
+      "  [ 15  66  66  59  60]\n",
+      "  [231  31 127 247 145]\n",
+      "  [169 146  64 125  56]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[101  97   8  99  54]\n",
+      "  [109 211 255   1 238]\n",
+      "  [177 246 166 174 206]\n",
+      "  [210 220 114 233  83]\n",
+      "  [126 250 209 249 228]]\n",
+      "\n",
+      " [[ 95  13 199 201 253]\n",
+      "  [246 154 247  57 220]\n",
+      "  [141 125  60 114 192]\n",
+      "  [ 32  15 151 138 154]\n",
+      "  [ 37 164   6  90 224]]\n",
+      "\n",
+      " [[107  77  89  81  96]\n",
+      "  [ 97 216 223  35 252]\n",
+      "  [115 147 225  78 180]\n",
+      "  [ 50 123 244 176 126]\n",
+      "  [213 189  79 221 167]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import numpy.random as rdm\n",
+    "\n",
+    "n_frames = 50\n",
+    "n_pixel_x = 5\n",
+    "n_pixel_y = 5\n",
+    "movie = rdm.randint(256, size=(n_frames, n_pixel_x, n_pixel_y))\n",
+    "print(movie)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50, 5, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(movie.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[123.62 122.18 117.36 131.26 132.34]\n",
+      " [142.9  131.44 157.54 108.34 127.12]\n",
+      " [146.64 134.38 134.8  151.32 146.64]\n",
+      " [123.36 129.98 143.12 134.2  125.8 ]\n",
+      " [115.86 128.66 135.16 129.18 139.58]]\n",
+      "(5, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pixel_mean_intensity = np.mean(movie, axis=0)\n",
+    "print(pixel_mean_intensity)\n",
+    "print(pixel_mean_intensity.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<script>\n",
     "  $(document).ready(function(){\n",
     "    $('div.back-to-top').hide();\n",
