--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -403,50 +403,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[ 67  80  78 240 215]\n",
-      "  [ 17 200 175  31   7]\n",
-      "  [245 187 193 217  28]\n",
-      "  [ 22 203  25  27 186]\n",
-      "  [168  53  57 166 223]]\n",
+      "[[[216 146 197  63 192]\n",
+      "  [111 125 199  66  50]\n",
+      "  [232 122 120  47  89]\n",
+      "  [ 65 120  17  57 141]\n",
+      "  [191 242  49 248  70]]\n",
       "\n",
-      " [[141  64 197 184 255]\n",
-      "  [252  93 243  23 190]\n",
-      "  [ 44  92 113 207 116]\n",
-      "  [163  93 234  79 249]\n",
-      "  [ 42 148  69 142  82]]\n",
+      " [[252 231 211 147 238]\n",
+      "  [ 32   5  52 161 215]\n",
+      "  [164 102 209 210  38]\n",
+      "  [207 132  35   4 107]\n",
+      "  [122   9   1  88  55]]\n",
       "\n",
-      " [[ 46  60  70  39 149]\n",
-      "  [194 178  28 162   9]\n",
-      "  [ 15  66  66  59  60]\n",
-      "  [231  31 127 247 145]\n",
-      "  [169 146  64 125  56]]\n",
+      " [[219  25 132  61 165]\n",
+      "  [232  47 127 103 179]\n",
+      "  [237  38 118 248 116]\n",
+      "  [180   4 211 145  27]\n",
+      "  [  9 102 213 212 145]]\n",
       "\n",
       " ...\n",
       "\n",
-      " [[101  97   8  99  54]\n",
-      "  [109 211 255   1 238]\n",
-      "  [177 246 166 174 206]\n",
-      "  [210 220 114 233  83]\n",
-      "  [126 250 209 249 228]]\n",
+      " [[109   0  87  58 112]\n",
+      "  [219  14 119  93  16]\n",
+      "  [153  31 119 137  50]\n",
+      "  [184  90 230 199 180]\n",
+      "  [ 50 139 155  23  41]]\n",
       "\n",
-      " [[ 95  13 199 201 253]\n",
-      "  [246 154 247  57 220]\n",
-      "  [141 125  60 114 192]\n",
-      "  [ 32  15 151 138 154]\n",
-      "  [ 37 164   6  90 224]]\n",
+      " [[133 167 202  83  18]\n",
+      "  [ 49 191 198 133 245]\n",
+      "  [218 174  52 186 249]\n",
+      "  [ 23  19 101   1 178]\n",
+      "  [146 172 113 140  21]]\n",
       "\n",
-      " [[107  77  89  81  96]\n",
-      "  [ 97 216 223  35 252]\n",
-      "  [115 147 225  78 180]\n",
-      "  [ 50 123 244 176 126]\n",
-      "  [213 189  79 221 167]]]\n"
+      " [[155 106 214  14  29]\n",
+      "  [ 25  76 141  92  61]\n",
+      "  [120   7 132  46 121]\n",
+      "  [210  38 145 135  72]\n",
+      "  [ 12  72   6  45 215]]]\n"
      ]
     }
    ],
@@ -480,18 +480,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[123.62 122.18 117.36 131.26 132.34]\n",
-      " [142.9  131.44 157.54 108.34 127.12]\n",
-      " [146.64 134.38 134.8  151.32 146.64]\n",
-      " [123.36 129.98 143.12 134.2  125.8 ]\n",
-      " [115.86 128.66 135.16 129.18 139.58]]\n",
+      "[[144.76 132.74 146.86 117.56 131.  ]\n",
+      " [109.42 118.08 110.42 104.58 137.42]\n",
+      " [121.86 123.22 129.7  123.3  112.94]\n",
+      " [128.86 114.26 138.28 129.96 114.72]\n",
+      " [121.92 117.68  99.62 129.66 117.68]]\n",
       "(5, 5)\n"
      ]
     }
@@ -500,6 +500,40 @@
     "pixel_mean_intensity = np.mean(movie, axis=0)\n",
     "print(pixel_mean_intensity)\n",
     "print(pixel_mean_intensity.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6.4\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.000022551178061 3.000022551178061\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import numpy.random as rdm\n",
+    "\n",
+    "values = rdm.normal(5, 3, 1000000)\n",
+    "\n",
+    "values -= 5\n",
+    "residuals = values - np.mean(values)\n",
+    "squared_residuals = residuals**2\n",
+    "variance = np.sum(squared_residuals) / values.size\n",
+    "print(np.std(values), np.sqrt(variance))"
    ]
   },
   {
