iniziata lezione sklearn

--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -4,13 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- [3.1](#3.1)\n",
+    "- [3.2](#3.2)\n",
+    "- [4.1, 4.2](#4.1,-4.2)\n",
+    "- [5.1, 5.2, 5.3](#5.1,-5.2,-5.3)\n",
+    "- [5.4, 5.5](#5.4,-5.5)\n",
+    "- [6.2](#6.2)\n",
+    "- [6.3](#6.3)\n",
+    "- [6.4](#6.4)\n",
+    "- [KNN1](#KNN1)\n",
+    "- [KNN2](#KNN2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "3.1\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -362,17 +378,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0003876317476104\n",
-      "1.0003876317476064\n",
-      "449 ms ± 44.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
-      "2.33 ms ± 140 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "0.999134485262745\n",
+      "0.9991344852627513\n",
+      "342 ms ± 17.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "2.79 ms ± 213 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -403,50 +419,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[216 146 197  63 192]\n",
-      "  [111 125 199  66  50]\n",
-      "  [232 122 120  47  89]\n",
-      "  [ 65 120  17  57 141]\n",
-      "  [191 242  49 248  70]]\n",
+      "[[[199 105 118 252  23]\n",
+      "  [ 32 190  83 184 122]\n",
+      "  [ 57  13   5  10 225]\n",
+      "  [250 197  93 184  59]\n",
+      "  [117  25  79 180  51]]\n",
       "\n",
-      " [[252 231 211 147 238]\n",
-      "  [ 32   5  52 161 215]\n",
-      "  [164 102 209 210  38]\n",
-      "  [207 132  35   4 107]\n",
-      "  [122   9   1  88  55]]\n",
+      " [[166 218  12  71 253]\n",
+      "  [ 96 213 162  37 246]\n",
+      "  [109 119 179 185 218]\n",
+      "  [ 82  81  33 113 108]\n",
+      "  [  6 232 149  92 195]]\n",
       "\n",
-      " [[219  25 132  61 165]\n",
-      "  [232  47 127 103 179]\n",
-      "  [237  38 118 248 116]\n",
-      "  [180   4 211 145  27]\n",
-      "  [  9 102 213 212 145]]\n",
+      " [[245 189  26  47  91]\n",
+      "  [191  45  38 157 125]\n",
+      "  [188  14  89 185 189]\n",
+      "  [112  60 206 177  14]\n",
+      "  [118 135   9 231  60]]\n",
       "\n",
       " ...\n",
       "\n",
-      " [[109   0  87  58 112]\n",
-      "  [219  14 119  93  16]\n",
-      "  [153  31 119 137  50]\n",
-      "  [184  90 230 199 180]\n",
-      "  [ 50 139 155  23  41]]\n",
+      " [[ 33 200 170 220 252]\n",
+      "  [132 159 215 100  26]\n",
+      "  [223  95  49 225 169]\n",
+      "  [115 239 139  32  45]\n",
+      "  [177  33  96  40 235]]\n",
       "\n",
-      " [[133 167 202  83  18]\n",
-      "  [ 49 191 198 133 245]\n",
-      "  [218 174  52 186 249]\n",
-      "  [ 23  19 101   1 178]\n",
-      "  [146 172 113 140  21]]\n",
+      " [[143 109  15  37  16]\n",
+      "  [111  54  82  78  43]\n",
+      "  [ 95 133 156 128 107]\n",
+      "  [212  79 141  53 137]\n",
+      "  [ 97 102 107 231  45]]\n",
       "\n",
-      " [[155 106 214  14  29]\n",
-      "  [ 25  76 141  92  61]\n",
-      "  [120   7 132  46 121]\n",
-      "  [210  38 145 135  72]\n",
-      "  [ 12  72   6  45 215]]]\n"
+      " [[188 153 254 223 233]\n",
+      "  [239 220  14 206  58]\n",
+      "  [182 178  88  74  78]\n",
+      "  [ 94  60  57  99 230]\n",
+      "  [103 111 180 163 213]]]\n"
      ]
     }
    ],
@@ -463,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -480,18 +496,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[144.76 132.74 146.86 117.56 131.  ]\n",
-      " [109.42 118.08 110.42 104.58 137.42]\n",
-      " [121.86 123.22 129.7  123.3  112.94]\n",
-      " [128.86 114.26 138.28 129.96 114.72]\n",
-      " [121.92 117.68  99.62 129.66 117.68]]\n",
+      "[[135.54 115.88 128.8  120.28 125.7 ]\n",
+      " [143.14 133.44 117.78 127.32 129.2 ]\n",
+      " [125.18 129.34 110.64 129.16 136.16]\n",
+      " [138.04 126.92 131.84 140.36 131.34]\n",
+      " [119.04 123.2  127.08 138.56 143.46]]\n",
       "(5, 5)\n"
      ]
     }
@@ -512,14 +528,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.000022551178061 3.000022551178061\n"
+      "3.002138317145509 3.002138317145509\n"
      ]
     }
    ],
@@ -534,6 +550,503 @@
     "squared_residuals = residuals**2\n",
     "variance = np.sum(squared_residuals) / values.size\n",
     "print(np.std(values), np.sqrt(variance))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6.5\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrice delle feature: [[0.5488135  0.71518937 0.60276338 0.54488318]\n",
+      " [0.4236548  0.64589411 0.43758721 0.891773  ]\n",
+      " [0.96366276 0.38344152 0.79172504 0.52889492]\n",
+      " [0.56804456 0.92559664 0.07103606 0.0871293 ]\n",
+      " [0.0202184  0.83261985 0.77815675 0.87001215]\n",
+      " [0.97861834 0.79915856 0.46147936 0.78052918]\n",
+      " [0.11827443 0.63992102 0.14335329 0.94466892]]\n",
+      "\n",
+      "Vettore delle etichette: [1 0 0 1 1 0 1]\n",
+      "\n",
+      "Nuovo esempio da classificare: [0.73691818 0.21655035 0.13521817 0.32414101]\n",
+      "\n",
+      "Predizione (k=3): 1\n",
+      "Predizione (k=5): 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from numpy.linalg import norm\n",
+    "\n",
+    "np.random.seed(0)\n",
+    "\n",
+    "def KNN(k, X, y, x):\n",
+    "    distances = norm(X_train - x_new, axis=1)\n",
+    "    sorted_labels = y_train[distances.argsort()]\n",
+    "    return np.argmax(np.bincount(sorted_labels[:k]))\n",
+    "\n",
+    "def one_line_KNN(k, X, y, x):\n",
+    "    return np.argmax(np.bincount(y_train[norm(X_train - x_new, axis=1).argsort()][:k]))\n",
+    "\n",
+    "X_train = np.random.random((7,4))\n",
+    "y_train = np.random.randint(0, 2, (7))\n",
+    "x_new = np.random.random(4)\n",
+    "\n",
+    "print('Matrice delle feature:', X_train)\n",
+    "\n",
+    "print('\\nVettore delle etichette:', y_train)\n",
+    "\n",
+    "print('\\nNuovo esempio da classificare:', x_new)\n",
+    "\n",
+    "print('\\nPredizione (k=3):', one_line_KNN(3, X_train, y_train, x_new))\n",
+    "print('Predizione (k=5):', one_line_KNN(5, X_train, y_train, x_new))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "KNN1\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 0  2 -1]\n",
+      " [-1  2  3]\n",
+      " [ 3  1  3]]\n",
+      "[0 1 0 1]\n",
+      "[1 1 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "X_train = np.array([[1,2,3],\n",
+    "                    [0,2,-1],\n",
+    "                    [-1,2,3],\n",
+    "                    [3,1,3]])\n",
+    "\n",
+    "x_new = np.array([1,1,2])\n",
+    "\n",
+    "y_train = np.array([0,1,0,1])\n",
+    "\n",
+    "print(X_train)\n",
+    "print(y_train)\n",
+    "print(x_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.41 3.32 2.45 2.24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "distances = [np.sqrt(np.sum((x - x_new) ** 2)) for x in X_train]#riga per riga\n",
+    "distances = np.round(distances, 2)\n",
+    "print(distances)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Posso calcolare le distanze in modo ancora più compatto:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 1],\n",
+       "       [1, 1, 9],\n",
+       "       [4, 1, 1],\n",
+       "       [4, 0, 1]])"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(X_train - x_new) ** 2#differenze al quadrato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2, 11,  6,  5])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum((X_train - x_new) ** 2, axis=1)#somma (lungo le colonne) degli scarti al quadrato"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.41 3.32 2.45 2.24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "distances = np.sqrt(np.sum((X_train - x_new) ** 2, axis=1))#tutto vettoriale\n",
+    "distances = np.round(distances, 2)\n",
+    "print(distances)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quindi, tutto in una riga:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.41 3.32 2.45 2.24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.round(np.sqrt(np.sum((X_train - x_new) ** 2, axis=1)), 2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Norma* di un vettore $d$-dimensionale: $\\|x\\|_2 := \\sqrt{\\frac{1}{d}\\displaystyle\\sum_1^d x_i^2}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.14967487 0.22232139 0.38648898 0.90259848 0.44994999]\n",
+      "1.1128082042838254\n",
+      "1.1128082042838254\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy.linalg import norm\n",
+    "\n",
+    "vec = np.random.random((5,))\n",
+    "print(vec)\n",
+    "print(np.sqrt(np.sum(vec**2)))\n",
+    "print(norm(vec))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La distanza euclidea tra due vettori $x$ e $x'$ è la norma del vettore differenza $x - x'$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  1]\n",
+      " [-1  1 -3]\n",
+      " [-2  1  1]\n",
+      " [ 2  0  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train - x_new)#matrice dei vettori differenza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.41 3.32 2.45 2.24]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.round(norm(X_train - x_new, axis=1), 2))#norma delle differenze (lungo le colonne!)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Nota**: abbiamo smesso di scrivere cicli for!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "KNN2\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.6 66. ]\n",
+      " [ 1.6 63. ]\n",
+      " [ 1.9 67. ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "people = np.array([[1.60, 66],\n",
+    "                   [1.60, 63],\n",
+    "                   [1.90, 67]])\n",
+    "\n",
+    "print(people)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.6 66. ]\n",
+      "[ 1.6 63. ]\n",
+      "[ 1.9 67. ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A, B, C = people\n",
+    "print(A)\n",
+    "print(B)\n",
+    "print(C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "1.0440306508910548\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(norm(A-B))\n",
+    "print(norm(A-C))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 1.]\n",
+      "[0.75 0.   1.  ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def scale_01(column):\n",
+    "    return (column - np.min(column)) / (np.max(column) - np.min(column))\n",
+    "\n",
+    "scaled_height = scale_01(people[:, 0])\n",
+    "scaled_weight = scale_01(people[:, 1])\n",
+    "\n",
+    "print(scaled_height)\n",
+    "print(scaled_weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.   0.   1.  ]\n",
+      " [0.75 0.   1.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaled_people = np.vstack([scaled_height, scaled_weight])\n",
+    "print(scaled_people)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.   0.75]\n",
+      " [0.   0.  ]\n",
+      " [1.   1.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaled_people = scaled_people.T#trasposizione\n",
+    "print(scaled_people)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.   0.75]\n",
+      " [0.   0.  ]\n",
+      " [1.   1.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#implementazione più compatta\n",
+    "scaled_people = (people - np.min(people, axis=0)) / (np.max(people, axis=0) - np.min(people, axis=0))\n",
+    "print(scaled_people)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.   0.75]\n",
+      "[0. 0.]\n",
+      "[1. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "scaled_A, scaled_B, scaled_C = scaled_people\n",
+    "print(scaled_A)\n",
+    "print(scaled_B)\n",
+    "print(scaled_C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.75\n",
+      "1.0307764064044151\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(norm(scaled_A-scaled_B))\n",
+    "print(norm(scaled_A-scaled_C))"
    ]
   },
   {
