--- a/6. NumPy.ipynb
+++ b/6. NumPy.ipynb
@@ -14,13 +14,14 @@
     "        - [*Esercizio 1*](#Esercizio-1)\n",
     "    - [Tipo e *casting* implicito](#Tipo-e-casting-implicito)\n",
     "    - [Slicing e accesso a righe e colonne](#Slicing-e-accesso-a-righe-e-colonne)\n",
-    "    - [Generazione di numeri random](#Generazione-di-numeri-random)\n",
+    "    - [Generazione di numeri casuali](#Generazione-di-numeri-casuali)\n",
     "    - [Operazioni aggregate e *axes*](#Operazioni-aggregate-e-axes)\n",
     "        - [*Esercizio 2*](#Esercizio-2)\n",
     "        - [*Esercizio 3*](#Esercizio-3)\n",
     "    - [*concatenate*, *stack* e *split*](#concatenate,-stack-e-split)\n",
     "    - [Funzioni *universali* e aritmetica degli array](#Funzioni-universali-e-aritmetica-degli-array)\n",
-    "        - [*Esercizio 4*](#Esercizio-4)"
+    "        - [*Esercizio 4*](#Esercizio-4)\n",
+    "    - [*Esercizio 5*](#Esercizio-5)"
    ]
   },
   {
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Generazione di numeri random\n",
+    "Generazione di numeri casuali\n",
     "---\n",
     "Il modulo *random* gestisce la generazione di (array di numeri) casuali da vari tipi di distribuzione statistica: https://docs.scipy.org/doc/numpy-1.14.0/reference/routines.random.html.\n",
     "\n",
@@ -1740,11 +1741,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#FILL ME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un'altra funzione aggregata che lavora lungo gli axes è *sort*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[69 33 57 86 28  2 41]\n",
+      " [ 6 83 16 95 17 32 75]\n",
+      " [10 38  0 14 97 91 77]\n",
+      " [41 57  8 91 76 37 80]\n",
+      " [88 44 69 52  7 15  9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.random.randint(0, 100, (5,7))\n",
+    "print(A)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 6, 33,  0, 14,  7,  2,  9],\n",
+       "       [10, 38,  8, 52, 17, 15, 41],\n",
+       "       [41, 44, 16, 86, 28, 32, 75],\n",
+       "       [69, 57, 57, 91, 76, 37, 77],\n",
+       "       [88, 83, 69, 95, 97, 91, 80]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(A, axis=0)#lungo le righe (cioè, 'ogni colonna è ordinata lungo le righe')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2, 28, 33, 41, 57, 69, 86],\n",
+       "       [ 6, 16, 17, 32, 75, 83, 95],\n",
+       "       [ 0, 10, 14, 38, 77, 91, 97],\n",
+       "       [ 8, 37, 41, 57, 76, 80, 91],\n",
+       "       [ 7,  9, 15, 44, 52, 69, 88]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(A, axis=1)#lungo le colonne"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2, 28, 33, 41, 57, 69, 86],\n",
+       "       [ 6, 16, 17, 32, 75, 83, 95],\n",
+       "       [ 0, 10, 14, 38, 77, 91, 97],\n",
+       "       [ 8, 37, 41, 57, 76, 80, 91],\n",
+       "       [ 7,  9, 15, 44, 52, 69, 88]])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sort(A)#di default, lungo l'ultimo axis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A volte può essere utile conoscere l'ordinamento degli indici che mi permetterebbe di ordinare un array. Questo si realizza comodamente col metodo *argsort*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8 1 2 0 3 4 6 5 9 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [3,1,2,4,5,7,6,9,0,8]\n",
+    "print(np.argsort(a))"
    ]
   },
   {
@@ -2153,6 +2280,49 @@
    "outputs": [],
    "source": [
     "#FILL ME"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Esercizio 5*\n",
+    "---\n",
+    "Implementare il modello $K$-nearest neighbors (KNN) per la classificazione. In particolare, costruire una funzione che\n",
+    "- utilizza operazioni aggregate e vettoriali di NumPy\n",
+    "- prende in ingresso\n",
+    " * un intero $k$\n",
+    " * un array bidimensionale di esempi $X_{train}$ (per comodità, generare numeri casuali tra 0 e 1)\n",
+    " * un array di etichette $y_{train}$ (interi, 0 o 1)\n",
+    " * un nuovo esempio da classificare $x_{new}$ (sempre tra 0 e 1)\n",
+    "- predice la classe di $x_{new}$ restituendo la più frequente tra le etichette (una qualsiasi in caso di pareggio) dei $K$ esempi di $X_{train}$ più vicini a $x_{new}$\n",
+    "\n",
+    "**Qualche consiglio**:\n",
+    "1. Il costrutto\n",
+    "        np.argmax(np.bincount(x))\n",
+    "   dove *x* è un array di interi, restituisce l'elemento più frequente tra quelli di x\n",
+    "2. Il metodo argsort è molto utile...!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[2 1 3 4 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#FILL ME\n",
+    "\n",
+    "print(np.argmax(np.bincount([1,1,0,0,0,0,1,0])))\n",
+    "print(np.argsort([4,1,0,2,3]))#indici che ordinerebbero l'array"
    ]
   },
   {
