--- a/7. Scikit-learn.ipynb
+++ b/7. Scikit-learn.ipynb
@@ -24,13 +24,13 @@
    "source": [
     "*Scikit-learn* (o *sklearn*) è uno dei principali strumenti Python per il machine learning ed è la libreria open-source di data science più usata al mondo.\n",
     "\n",
-    "Sulla pagina di sklearn, http://scikit-learn.org/stable/, si trovano svariati modelli di machine learning, insieme a strumenti di preprocessing, analisi e visualizzazione. \n",
+    "Sulla pagina di sklearn, http://scikit-learn.org/stable/, si trovano svariati modelli di machine learning, insieme a strumenti di preprocessing, analisi e visualizzazione dei dati. \n",
     "\n",
     "Ciascuna implementazione fa riferimento ad una guida utente molto dettagliata, che associa al codice la teoria necessaria per capirlo ed usarlo:\n",
     "\n",
-    "http://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html#sklearn.neighbors.KNeighborsClassifier.\n",
+    "http://scikit-learn.org/stable/modules/classes.html.\n",
     "\n",
-    "Oltre a fornire strumenti pronti all'uso che permettono di *usare* il machine learning con pochissime righe di codice, la libreria è altamente modulare, e dà la possibilità agli utenti di costruire la propria implementazione basandosi su metodi, oggetti ed interfacce esistenti.\n",
+    "Oltre a permettere di *usare* il machine learning scrivendo pochissime righe di codice, la libreria è altamente modulare, e dà la possibilità agli utenti di costruire la propria implementazione basandosi su metodi, oggetti ed interfacce esistenti.\n",
     "\n",
     "Teoria e codice sono spesso supportati da esempi pratici di utilizzo, affiancati da analisi grafiche: http://scikit-learn.org/stable/auto_examples/."
    ]
@@ -46,30 +46,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<module 'sklearn.neighbors' from '/home/francesco/anaconda3/lib/python3.6/site-packages/sklearn/neighbors/__init__.py'>\n",
-      "<module 'sklearn.datasets' from '/home/francesco/anaconda3/lib/python3.6/site-packages/sklearn/datasets/__init__.py'>\n"
+      "<module 'sklearn.neighbors' from '/home/francesco/anaconda3/lib/python3.6/site-packages/sklearn/neighbors/__init__.py'>\n"
      ]
     }
    ],
    "source": [
-    "from sklearn import neighbors, datasets\n",
+    "from sklearn import neighbors\n",
     "\n",
-    "print(neighbors)\n",
-    "print(datasets)"
+    "print(neighbors)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*neighbors* e *datasets* sono due moduli, ovvero insiemi di oggetti con caratteristiche comuni, impacchettati insieme.\n",
+    "*neighbors* è un *modulo*, ovvero insiemi di oggetti e funzioni con caratteristiche comuni, impacchettati insieme.\n",
     "\n",
     "Se scriviamo\n",
     "\n",
@@ -80,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,12 +106,12 @@
     "- posizionando il puntatore del mouse dentro le parentesi del costruttore e premendo Shift e due volte Tab\n",
     "- stampando l'oggetto creato,\n",
     "\n",
-    "che questa implementazione del classificatore KNN prende in ingresso diversi parametri (ma nessuno obbligatorio). Per esempio, il numero di vicini $k$ (chiamato *n_neighbors*) vale di default 5."
+    "che questa implementazione del classificatore KNN prende in ingresso diversi parametri, nessuno dei quali obbligatorio. Per esempio, il numero di vicini $k$ (chiamato *n_neighbors*) vale di default 5."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -137,12 +135,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scikit-learn mette a disposizione diversi dataset, su cui fare apprendimento e testare un modello, attraverso il modulo datasets."
+    "Attraverso il modulo *datasets*, sklearn mette a disposizione diversi dataset, sui quali fare apprendimento e testare un modello."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -154,6 +152,8 @@
     }
    ],
    "source": [
+    "from sklearn import datasets\n",
+    "\n",
     "iris = datasets.load_iris()\n",
     "print(type(iris))"
    ]
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -290,23 +290,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.9 3.1 1.5 0.1] 0\n",
-      "[6.9 3.1 5.1 2.3] 2\n",
-      "[5.  3.4 1.6 0.4] 0\n",
-      "[4.8 3.4 1.9 0.2] 0\n",
-      "[5.  3.  1.6 0.2] 0\n",
-      "[6.7 2.5 5.8 1.8] 2\n",
-      "[5.  3.5 1.3 0.3] 0\n",
-      "[5.4 3.4 1.5 0.4] 0\n",
-      "[5.  2.  3.5 1. ] 1\n",
-      "[5.4 3.9 1.7 0.4] 0\n"
+      "[5.1 3.5 1.4 0.2] 0\n",
+      "[4.9 3.  1.4 0.2] 0\n",
+      "[4.7 3.2 1.3 0.2] 0\n",
+      "[4.6 3.1 1.5 0.2] 0\n",
+      "[5.  3.6 1.4 0.2] 0\n",
+      "[5.4 3.9 1.7 0.4] 0\n",
+      "[4.6 3.4 1.4 0.3] 0\n",
+      "[5.  3.4 1.5 0.2] 0\n",
+      "[4.4 2.9 1.4 0.2] 0\n",
+      "[4.9 3.1 1.5 0.1] 0\n"
      ]
     }
    ],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "print(np.bincount(y))"
+    "print(np.bincount(y))#istogramma di occorrenza di valori interi in un array"
    ]
   },
   {
@@ -342,23 +342,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[4.9 3.1 1.5 0.1] 0\n",
+      "[4.6 3.1 1.5 0.2] 0\n",
       "[6.9 3.1 5.1 2.3] 2\n",
-      "[5.  3.4 1.6 0.4] 0\n",
-      "[4.8 3.4 1.9 0.2] 0\n",
-      "[5.  3.  1.6 0.2] 0\n",
+      "[6.2 2.2 4.5 1.5] 1\n",
+      "[4.9 3.1 1.5 0.1] 0\n",
+      "[6.5 3.  5.2 2. ] 2\n",
       "[6.7 2.5 5.8 1.8] 2\n",
-      "[5.  3.5 1.3 0.3] 0\n",
-      "[5.4 3.4 1.5 0.4] 0\n",
-      "[5.  2.  3.5 1. ] 1\n",
-      "[5.4 3.9 1.7 0.4] 0\n"
+      "[7.1 3.  5.9 2.1] 2\n",
+      "[6.4 3.2 5.3 2.3] 2\n",
+      "[6.9 3.1 5.4 2.1] 2\n",
+      "[5.7 4.4 1.5 0.4] 0\n"
      ]
     }
    ],
@@ -370,8 +370,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prendiamo quindi due terzi degli esempi per l'addestramento, e i restanti per il test."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -388,15 +395,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Prendiamo due terzi degli esempi per l'addestramento, e i restanti per il test."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -409,8 +409,25 @@
    ],
    "source": [
     "X_train = X[:n_train]#i primi n_train esempi (righe)\n",
-    "X_test = X[n_train:]#le altre\n",
+    "X_test = X[n_train:]#gli altri\n",
     "print(X_train.shape[0] + X_test.shape[0] == X.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(50, 4) (100, 4)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape, X_test.shape)"
    ]
   },
   {
@@ -422,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -447,36 +464,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-       "           metric_params=None, n_jobs=1, n_neighbors=3, p=2,\n",
-       "           weights='uniform')"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+      "           metric_params=None, n_jobs=1, n_neighbors=3, p=2,\n",
+      "           weights='uniform')\n"
+     ]
     }
    ],
    "source": [
-    "model.fit(X_train, y_train)"
+    "print(model.fit(X_train, y_train))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una volta addestrato, usiamo il modello per predire la classe degli esempi nel test set."
+    "Una volta addestrato il modello, lo usiamo per predire la classe degli esempi del test set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -495,6 +509,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotFittedError",
+     "evalue": "Must fit neighbors before querying.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotFittedError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-30-027404650b81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mneighbors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mKNeighborsClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/neighbors/classification.py\u001b[0m in \u001b[0;36mpredict\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    143\u001b[0m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcheck_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccept_sparse\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'csr'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 145\u001b[0;31m         \u001b[0mneigh_dist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mneigh_ind\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkneighbors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    146\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m         \u001b[0mclasses_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclasses_\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/sklearn/neighbors/base.py\u001b[0m in \u001b[0;36mkneighbors\u001b[0;34m(self, X, n_neighbors, return_distance)\u001b[0m\n\u001b[1;32m    325\u001b[0m         \"\"\"\n\u001b[1;32m    326\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_fit_method\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 327\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mNotFittedError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Must fit neighbors before querying.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    328\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    329\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mn_neighbors\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNotFittedError\u001b[0m: Must fit neighbors before querying."
+     ]
+    }
+   ],
+   "source": [
+    "neighbors.KNeighborsClassifier().predict(X_test)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -503,14 +540,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy on test set: 0.92\n"
+      "Model accuracy on test set: 0.91\n"
      ]
     }
    ],
@@ -524,19 +561,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Gli ultimi due passaggi possono essere fatti in un colpo solo col metodo *score* esposto dal modello (addestrato)."
+    "Gli ultimi due passaggi possono essere fatti in un colpo solo col metodo *score*, esposto dal modello (addestrato)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model accuracy on test set: 0.92\n"
+      "Model accuracy on test set: 0.91\n"
      ]
     }
    ],
@@ -551,6 +588,7 @@
    "outputs": [],
    "source": [
     "#sklearn scaling\n",
+    "#model selection\n",
     "#alberi di decisione\n",
     "#svm"
    ]
